--- a/catalogo/static/css/estilos_referencia.css
+++ b/catalogo/static/css/estilos_referencia.css
@@ -43,8 +43,8 @@ ul {
 }
 
 .mayor{
-    background-color: #002e78;
-    color:#ffffff;
+    background-color: #ffffff;
+    color:#002e78;
     padding-left: 5px;
     padding-right: 5px;
     border-radius: 5px;
@@ -85,4 +85,39 @@ ul {
     color: #ffffff;
     background-color: #002e78;
     border-radius: 5px;
+}
+
+@keyframes shine {
+    0% {
+        filter: brightness(1);
+    }
+    30% {
+        filter: brightness(1.5);
+    }
+    50% {
+        filter: brightness(2);
+    }
+    70% {
+        filter: brightness(1.5);
+    }
+    100% {
+        filter: brightness(1);
+    }
+}
+
+.discount-flag {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background-color: rgb(0, 52, 104);
+    color: white;
+    padding: 2px 2px;
+    font-size: 12px;
+    font-weight: bold;
+    border-radius: 5px;
+    opacity: 0.8;
+    animation: shine 4s infinite;
+}
+.carousel-item {
+    position: relative;
 }
