--- a/catalogo/ventas/templates/layout.html
+++ b/catalogo/ventas/templates/layout.html
@@ -18,7 +18,8 @@
     <div class="col-12">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'ver_referencias' %}">Kosta Azul</a>
+          <a class="navbar-brand" href="{% url 'ver_referencias' %}"
+            style="text-decoration:none; color: #002e78; font-weight: bold;">Kosta Azul</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
