--- a/catalogo/ventas/templates/layout.html
+++ b/catalogo/ventas/templates/layout.html
@@ -15,11 +15,11 @@
 
 <body>
   <div class="row">
-    <div class="col-12">
+    <div class="col-12" style="position:fixed; z-index: 10;">
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'ver_referencias' %}"
-            style="text-decoration:none; color: #002e78; font-weight: bold;">Kosta Azul</a>
+          <a class="navbar-brand" href="{% url 'ver_referencias' %}" style="text-decoration:none; color: #002e78;">Kosta
+            Azul</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
