--- a/catalogo/ventas/templates/referencias.html
+++ b/catalogo/ventas/templates/referencias.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %} {% load humanize %} {% block content %}
-<div class="row container-fluid">
+<div class="row container-fluid" style="margin-top: 5em;">
 	{% for r in referencias %}
 	<div class="col-lg-3 col-12 col-md-6 col-sm-6 p-1">
 		<div class="card">
